# Shelflife

./: CHANGELOG.txt  DOCUMENTATION.md  PROJECT_HISTORY.md  ShelfLife Dashboard (Sunset Edition)Final.html  build_android.bat  capacitor.config.json  cloudbuild.yaml  dashboard_sample.html  index.html  index_working.html  package.json
.github/workflows/: build-windows.yml
ShelfLife_Android/: CHANGELOG.txt  capacitor.config.json  cloudbuild.yaml  index.html  index_BASELINE_2026-02-11.html  index_v2.5_BASELINE.html  index_v2.8_PATCHED.html  package.json
ShelfLife_PWA/: package.json
ShelfLife_PWA/HTML portable/: CHANGELOG.txt
ShelfLife_Windows/: CHANGELOG.txt
ShelfLife_Windows/.github/workflows/: build-windows.yml
ShelfLife_Windows/src-tauri/: BUILD_TRIGGER  Cargo.toml  tauri.conf.json
src-tauri/: BUILD_TRIGGER  tauri.conf.json
